--- a/acara.html
+++ b/acara.html
@@ -15,7 +15,7 @@
             </div>
 
             <ul class="nav-menu">
-                <li><a href="beranda.html">Beranda</a></li>
+                <li><a href="index.html">Beranda</a></li>
                 <li><a href="koleksi.html">Koleksi</a></li>
                 <li><a href="tentang kami.html">Tentang Kami</a></li>
                 <li><a href="peminjaman.html">Peminjaman</a></li>
@@ -182,4 +182,5 @@
         });
     </script>
 </body>
+
 </html>
