--- a/tentang kami.html
+++ b/tentang kami.html
@@ -18,7 +18,7 @@
             </div>
 
             <ul class="nav-menu">
-                <li><a href="beranda.html">Beranda</a></li>
+                <li><a href="index.html">Beranda</a></li>
                 <li><a href="koleksi.html">Koleksi</a></li>
                 <li><a href="tentang kami.html"  class="active">Tentang Kami</a></li>
                 <li><a href="peminjaman.html">Peminjaman</a></li>
@@ -184,5 +184,6 @@
         });
     </script>
 </body>
+
 
 </html>
